# Perimortem

./: .bazelrc  .clang-format  .gitattributes  .gitignore  LICENSE  MODULE.bazel  README.md  Refactor.md  build_trace.data
apps/: BUILD  splash_screen.cpp  splash_screen.ttx
apps/shaders/: icon.ttx
core/: BUILD
core/concepts/: bibliotheca.cpp  bibliotheca.hpp  bitflag.hpp  narrow_resolver.hpp  singleton.hpp  sparse_index.hpp  sparse_lookup.hpp  stack_types.hpp  standard_types.hpp
core/data/: arena.cpp  arena.hpp
core/memory/: arena.cpp  arena.hpp  bibliotheca.cpp  bibliotheca.hpp  byte_view.cpp  byte_view.hpp  managed_lookup.hpp  managed_string.cpp  managed_string.hpp  managed_vector.hpp  operations.cpp  operations.hpp  standard_types.hpp
core/resource/: manager.cpp  manager.hpp  path.cpp  path.hpp
core/storage/: disk_info.hpp  virtual_disk_reader.cpp  virtual_disk_reader.hpp  virtual_disk_writer.cpp  virtual_disk_writer.hpp
core/tests/: base64_tests.cpp  json_tests.cpp  manager_tests.cpp  virtual_disk_reader_tests.cpp  virtual_disk_writer_tests.cpp
main/: BUILD  main.cpp
perimortem/: BUILD
perimortem/abi/: log.cpp
tests/: BUILD
tetrodotoxin/: BUILD  README.md  main.cpp  ttx.bzl  ttx_design.md  ttx_semantics.md
toolchain/: BUILD  cc_toolchain_config.bzl  tetrodotoxin.bzl
ttx/: BUILD  README.md  documentation.hpp  error.hpp  layout.cpp  layout.hpp  source.cpp  source.hpp  ttx_design.md  ttx_semantics.md  type.cpp  type.hpp
validation/: BUILD  benchmark.cpp  benchmark.hpp  format_ttx_fixture.cpp  harness.hpp  unit_test.cpp  unit_test.hpp
(+728 files in other folders)
