"Bazel file for building Perimortem"

module(
    name = "perimortem",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "zstd", version = "1.5.7")

register_toolchains(
    "//toolchain:cc_toolchain_for_linux_x86_64",
)
