"Bazel file for building Perimortem"

module(
    name = "perimortem",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "zstd", version = "1.5.7")

register_toolchains(
    "//toolchain:cc_toolchain_for_linux_x86_64",
)
